--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>Introduce un título</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" type="text/css" media="print" href="print.css" />
 </head>
 
 <body>
 
-    <div class="col- f"></div>
-    <div class="col- f"></div>
-    <div class="col- f"></div>
-    <div class="col- f"></div>
-    <div class="col- f"></div>
-    <div class="col- f"></div>
+    <div class="col-4"></div>
+    <div class="col-1"></div>
+    <div class="col-2"></div>
+    <div class="col-1"></div>
+    <div class="col-3"></div>
+    <div class="col-1"></div>
 
     <script src="main.js"></script>
 </body>
