--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 
 <body>
 
-    <div class="col-4"></div>
-    <div class="col-1"></div>
-    <div class="col-2"></div>
-    <div class="col-1"></div>
-    <div class="col-3"></div>
-    <div class="col-1"></div>
+    <div class="col-4 t"></div>
+    <div class="col-1 f"></div>
+    <div class="col-2 s"></div>
+    <div class="col-1 f"></div>
+    <div class="col-3 s"></div>
+    <div class="col-1 f"></div>
 
     <script src="main.js"></script>
 </body>
